# Genworx

./: README.md
Story Generator/: chatbot.py  main.py  requirements.txt
Story Generator/app/: backend.py  main.py
Story Generator/data/chapters/: 1) The Inheritance of Shadows.txt  10) The Mirror's Reflection.txt  2) Whispers of the Past.txt  3) The Scientist's Exile.txt  4) Echoes of Holloway.txt  5) The Medium's Burden.txt  6) Cult of the Obsidian.txt  7) Awakening Visions.txt  8) Guardians of the Ancient.txt  9) The Descent into Darkness.txt
Story Generator/data/raw/: chapter_title_list.json  character_list.json  summary.txt
Story Generator/data1/chapters/: 1) The Philanthropist's Fall.txt  10) Aftermath and Echoes.txt  2) Whispers of the Syndicate.txt  3) The Informant's Bargain.txt  4) The Prosecutor's Dilemma.txt  5) Shadows of the Mind.txt  6) The Mastermind Unveiled.txt  7) The Hacker's Game.txt  8) Secrets Within the Force.txt  9) Auction Showdown.txt
Story Generator/data1/raw/: chapter_title_list.json  character_list.json  summary.txt
Story Generator/src/: App.js  ChapterContent.css  ChapterTitles.css  GenreSelector.css  GenreSelector.js  Summary.css
Tweet Generation using LangChain/: README.md  pyproject.toml  requirements.txt
Tweet Generation using LangChain/app/: core.py  main.py  schemas.py
src/: ChapterContent.js  ChapterTitles.js  CharacterList.css  CharacterList.js  Summary.js
