[project]
name = "langchain-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.2",
    "langchain>=1.0.3",
    "langchain-classic>=1.0.0",
    "langchain-core>=1.0.2",
    "langchain-ollama>=1.0.0",
    "openai>=2.6.1",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]
